--- a/scss/dota2sprites.scss
+++ b/scss/dota2sprites.scss
@@ -1,8 +1,9 @@
 .d2s {
-    background-repeat: no-repeat;
-    display: inline-block;
-    vertical-align: middle;
+	background-repeat: no-repeat;
+	display: inline-block;
+	vertical-align: middle;
 }
-
 @import 'dota2_minimap_heroes';
 @import 'dota2_items';
+@import 'dota2_heroes_medium';
+@import 'dota2_heroes_small';
