Fixed typo in minimap sprite name

--- a/scss/_dota2_minimap_heroes.scss
+++ b/scss/_dota2_minimap_heroes.scss
@@ -1,5 +1,5 @@
 .d2s[class^='mini-'], .d2s[class*='mini-'] {
-    background-image: url('../img/minimap_mini_sheet.png');
+    background-image: url('../img/minimap_hero_sheet.png');
     width: 32px;
     height: 32px;
 }
