Fixed a typo in item sheet url

--- a/scss/_dota2_items.scss
+++ b/scss/_dota2_items.scss
@@ -1,5 +1,5 @@
 .d2s[class^='item-'], .d2s[class*='item-'] {
-    background-image: url('../img/item-sheet.png');
+    background-image: url('../img/item_sheet.png');
     width: 40px;
     height: 30px;
 }
